--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
         // ドローンのモデル（簡易ボックス）
         const droneGeometry = new THREE.BoxGeometry(1, 0.2, 1);
-        const droneMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+        const droneMaterial = new THREE.MeshBasicMaterial({ color: 0x00aa00 });
         const drone = new THREE.Mesh(droneGeometry, droneMaterial);
         scene.add(drone);
 
         // ドローンの軌跡（シリンダーでプロペラを模倣）
-        const propellerGeometry = new THREE.CylinderGeometry(0.4, 0.4, 0.02, 32);
+        const propellerGeometry = new THREE.CylinderGeometry(0.45, 0.45, 0.02, 32);
         const propellerMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff });
         const propeller1 = new THREE.Mesh(propellerGeometry, propellerMaterial);
         const propeller2 = propeller1.clone();
