--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Simulation</title>
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.0/build/three.min.js"></script>
+    
+    <meta property="og:title" content="Drone Simulation">
+    <meta property="og:description" content="Control a virtual drone using keyboard and touch inputs!">
+    <meta property="og:image" content="https://kouhei1970.github.io/threeD_test/threeD_drone.png">
+    <meta property="og:url" content="https://kouhei1970.github.io/threeD_test/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+
 </head>
 <body>
     <div id="simulation" style="width: 100%; height: 100vh; background-color: #000;"></div>
